# twitter-data-engineering

./: .gitignore  pyproject.toml
data/raw/: schema.json
data/staged/: schema.json
notebooks/: data_preparation.ipynb  utils.py
src/: dataPreparation.py
