[tool.poetry]
name = "twitter-data-engineering"
version = "0.1.0"
description = ""
authors = ["Victoria Reis <victoria.reis@coc.ufrj.br>"]
readme = "README.md"
packages = [{include = "twitter_data_engineering"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
